reactivate tests, fixes #156